@@ -1,3 +1,9 @@
+2001-12-15 Alexander Rawass <alexannika@users.sourceforge.net>
+	
+	* added _std.isNull function to test for null objects
+	* added callback 'launch' to launch new ships from script
+	
+	
 2001-12-14 Alexander Rawass <alexannika@users.sourceforge.net>
 	
 	* a joystick axis can now have an 'inverse' attribute
